test/types/chplhashtable/resize-threshold-oob1.chpl
use Map;

var m = new map(int,int,resizeThreshold=1);
